Fix image too long

--- a/assets/texttoimg/css/default.css
+++ b/assets/texttoimg/css/default.css
@@ -379,7 +379,6 @@ body {
     line-height: 1.6rem;
     letter-spacing: 0;
     margin: 0;
-    overflow-x: hidden
 }
 
 img {
